fixed the final two mistakes hopfully, aligning the checkbox and fixing the logo positon

--- a/Blocks/form.css
+++ b/Blocks/form.css
@@ -62,5 +62,11 @@
   border-radius: 2px;
   width: 20px;
   height: 20px;
-  margin: 32px 12px 0px auto;
+  margin-right: 12px;
+}
+
+.form__label_type_checkbox {
+  margin: 32px;
+  display: flex;
+  align-items: center;
 }
