--- a/Blocks/header.css
+++ b/Blocks/header.css
@@ -5,7 +5,7 @@
   height: 100vh;
   min-height: 720px;
   max-height: 800px;
-  padding: 30px 80px 40px;
+  padding: 30px 30px 40px;
   position: relative;
   box-sizing: border-box;
   background: #fff url("../images/background_header.svg") no-repeat center/cover;
